# wolmgr

./: .dev.vars.example  .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  rsbuild.config.ts  rslib.config.ts  tsconfig.json  wol-routeros-script.rsc  wrangler.json
.github/workflows/: build-docker.yml  ci.yml  deploy-cloudflare.yml
backend/: Cargo.toml
backend/src/: main.rs
broker/esp32-s3/: Cargo.toml  README.md  sdkconfig.defaults
broker/esp32-s3/.cargo/: config.toml
broker/esp32-s3/src/: main.rs
frontend/: package.json  rsbuild.config.ts  tsconfig.json
frontend/src/: api.ts  index.css  index.tsx  shared.ts
src/: _worker.ts  index.css  index.tsx  shared.ts  waker.ts
src/types/: ros-client.d.ts
