[package]
name = "wolmgr-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.9", features = ["macros"] }
base64 = "0.22.1"
cookie = "0.18.1"
mime_guess = "2.0.5"
nanoid = "0.4.0"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls"] }
rumqttc = { version = "0.25.1", features = ["url"] }
rumqttd = { version = "0.20.0", default-features = false }
rust-embed = { version = "8.11.0", features = ["axum", "mime_guess"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
toasty = { version = "0.7.0", features = ["sqlite"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.7"
